fixed post spacing and layout

--- a/css/design.sass
+++ b/css/design.sass
@@ -153,14 +153,21 @@ p
   width: 100%
   display: grid
   grid-template-columns: 1fr 1fr 1fr
-  margin-bottom: 10rem
+  margin-bottom: 15rem
+  h4
+    font-size: 1.4rem
+    margin-bottom: 1.5rem
+    text-align: center
+    &::after
+      content: ""
+      display: block
+      width: 90%
+      padding-top: 0.5rem
+      margin: 2px auto 3rem
+      border-bottom: solid 3.5px #d6e2ff
   p
-    margin-top: 2rem
-
-hr
-  border: solid 2px #d6e2ff
-  width: 90%
-  margin: 0 auto 10rem
+    margin-top: 3rem
+    text-align: justify
 
 
 
